[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpmn_assistant"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "litellm>=1.77.5",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.33.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["bpmn_assistant"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
]
